# dmalloc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-ubuntu.yml
doc/: API.md  dmalloc_API_manual.md  index.html
doc/functions/: darenadestroy.html  darenainit.html  dfree.html  dmalloc.html
doc/pages/: darenadestroy.html  darenainit.html  dfree.html  dmalloc.html
doc/style/: functionpage_style.css
docs/: index.html
docs/pages/: darena_t.html  darenadestroy.html  darenainit.html  dcalloc.html  dfree.html  dmalloc.html  drealloc.html  dreallocarray.html
docs/styles/: base_style.css
include/: dmalloc.h
src/: dmalloc.c  dmalloc_alloc.c  dmalloc_alloc.h  dmalloc_arenas.c  dmalloc_arenas.h  dmalloc_core.c  dmalloc_debug.c  dmalloc_defs.h  dmalloc_internals.h  dmalloc_libc_wrappers.c
src/headers/: dmalloc_arenas.h  dmalloc_core.h  dmalloc_debug.h  dmalloc_defs.h
test/: base_tests.c  test_dmalloc.c  test_dmalloc.h
